corrected, image not showing issue

--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@ a {
     text-decoration: none;
 }
 
-.App-logo {
+/* .App-logo {
     height: 40vmin;
     pointer-events: none;
 }
@@ -43,4 +43,4 @@ a {
     to {
         transform: rotate(360deg);
     }
-}
+} */
